--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -43,7 +43,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/fonts/Roboto-Lightt.otf');
+  src: url('/fonts/Roboto-Light.otf');
   font-weight: 300;
   font-style: normal;
 }
