--- a/app/components/PostItem/PostItem.css
+++ b/app/components/PostItem/PostItem.css
@@ -1,11 +1,12 @@
 article.post-item {
   display: flex;
   flex-direction: column;
-  max-width: 900px;
+  margin: auto;
+  max-width: 500px;
+  align-items: center;
 }
 
-article.post-item.featured .wrapper {
-  grid-column: 2 / 3;
+article.post-item .content-wrapper {
   margin-top: 35px;
 }
 
@@ -22,42 +23,40 @@ article.post-item .excerpt {
 }
 
 article.post-item img {
-  width: 600px;
-  height: 400px;
-  object-fit: cover;
   border-radius: 5px;
   grid-column: 1 / 2;
-  overflow: hidden;
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 3 / 2;
 }
 
-article.post-item .wrapper a.button {
-  background-color: var(--strong-pink);
-  color: #000;
-  border: 1px solid #000;
-  border-radius: 5px;
-  font-family: 'Agrandir';
-  font-weight: 200;
-  margin-top: 30px;
-}
+/* Component-specific media breakpoint */
 
-@media (min-width: 720px) {
-  article.post-item.featured {
+@media (min-width: 800px) {
+  article.featured {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto;
     gap: 0.5em 2em;
+    max-width: 100%;
   }
 
-  article.post-item:not(.featured) {
-    max-width: 600px;
+  article.post-item .content-wrapper {
+    margin-top: 20px;
   }
 
-  article.post-item .wrapper,
-  article.post-item.featured .wrapper {
+  article.featured .content-wrapper {
     margin: auto 0;
   }
 
   article.post-item:not(.featured) h2 {
-    margin-top: 20px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+  }
+
+  article.featured img {
+    height: 100%;
   }
 }
