--- a/app/components/BookClubSection/BookClubSection.css
+++ b/app/components/BookClubSection/BookClubSection.css
@@ -1,7 +1,8 @@
 .book-club_section {
   background-color: #fff;
   text-align: center;
-  padding: 30px 10px;
+  width: 100%;
+  padding: 40px 0;
 }
 
 .book-club_section h2 {
@@ -17,21 +18,24 @@
   color: var(--dusty-rose);
 }
 
-.book-club_section .books ul {
+.book-club_section ul.books {
   list-style: none;
   padding: 0;
+  width: 90%;
+  margin: auto;
 }
 
-.book-club_section img {
-  width: 100%;
+.book-club_section ul.books li {
+  margin: 30px 0;
 }
 
 @media (min-width: 700px) {
-  .book-club_section .books ul {
+  .book-club_section ul.books {
     display: flex;
     justify-content: space-evenly;
   }
-  .book-club_section img {
-    max-width: 200px;
+
+  .book-club_section ul.books li {
+    margin: 30px;
   }
 }
