--- a/app/components/Divider/Divider.css
+++ b/app/components/Divider/Divider.css
@@ -1,11 +1,31 @@
-.posts_section .divider-wrapper {
+.posts-section .divider-wrapper {
   width: 100%;
   height: 1px;
   margin: 0 auto;
 }
 
-.posts_section .divider {
-  border-top: 1px dotted #000;
+.posts-section .divider {
   width: auto;
   height: 1px;
+  height: 7px;
+  background: radial-gradient(
+    #000000,
+    #000000 0.5px,
+    transparent 0.5px,
+    transparent
+  );
+  background-size: 7px 100%;
+}
+
+/* Variations */
+
+@media (min-width: 800px) {
+  .posts-section .divider-wrapper {
+    grid-column: 1 / -1;
+    width: 50%;
+  }
+
+  .posts-section .divider {
+    margin: 0 -60%;
+  }
 }
