--- a/app/components/shared/PostItem/FeaturedImage/FeaturedImage.css
+++ b/app/components/shared/PostItem/FeaturedImage/FeaturedImage.css
@@ -3,11 +3,15 @@ article.blog-post-item img {
   grid-column: 1 / 2;
   width: 100%;
   object-fit: cover;
-  aspect-ratio: 3 / 2;
+  aspect-ratio: 3 / 2 !important;
 }
 
 @media (min-width: 800px) {
   article.blog-post-item.featured img {
     height: 100%;
+  }
+
+  article.blog-post-item .featured-image.masonry-grid {
+    aspect-ratio: initial !important;
   }
 }
