--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -4,6 +4,7 @@
   src: url('/fonts/Agrandir-Narrow.otf');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,6 +12,7 @@
   src: url('/fonts/Agrandir-Regular.otf');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +20,7 @@
   src: url('/fonts/Agrandir-TextBold.otf');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -25,6 +28,7 @@
   src: url('/fonts/Paquito-Medium.ttf');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +36,7 @@
   src: url('/fonts/Paquito-Regular.ttf');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -39,6 +44,7 @@
   src: url('/fonts/PPWoodland-Ultralight.otf');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -46,6 +52,7 @@
   src: url('/fonts/Roboto-Light.ttf');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 *,
