--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -68,7 +68,7 @@
 :root {
   --weak-pink: #fff0ea;
   --strong-pink: #ffdcd0;
-  --dusty-rose: #b79289;
+  --dusty-rose: #85666b;
   --dusty-rose-light: #e2c0b3;
   --weak-white: #fffcf7;
   --eggshell: #fffdf9;
