--- a/app/components/shared/Posts/Posts.css
+++ b/app/components/shared/Posts/Posts.css
@@ -5,17 +5,14 @@
 
 .blog-grid.masonry {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, min(300px, 100%));
   grid-template-rows: masonry;
   gap: 2em;
 }
 
 .blog-grid.masonry > * {
   align-self: start;
-}
-
-.blog-container .blog-post-item {
-  margin-inline-end: 10px;
+  width: min(300px, 100%);
 }
 
 @media (min-width: 800px) {
